Core: Added escapeHtml option to avoid XSS attacks via showLabel methods

--- a/test/index.html
+++ b/test/index.html
@@ -467,6 +467,12 @@
 	<form id="testForm28">
 		<input type="text" name="f28input" required>
 	</form>
+	<form id="escapeHtmlForm1">
+		<input name="escapeHtmlForm1text" id="escapeHtmlForm1text" data-rule-required="true" />
+	</form>	
+	<form id="escapeHtmlForm2">
+		<input name="escapeHtmlForm2text" id="escapeHtmlForm2text" data-rule-required="true" />
+	</form>	
 </div>
 </body>
 </html>
